partially merge revision(s) 5f69a7f60467fa58c2f998daffab43e118bff36c: [Backport #17666]

Co-authored-by: Samuel Williams <@ioquatix>
https://github.com/nagachika/ruby/pull/1/commits/2cee515f024f3295945f312cb6b052f972f9c93d